Updated schema and code for testing
